@@ -4,6 +4,7 @@
 	* CORE: Fixed a bug when we select columns on an entity without an id field.  Thanks to lder.
 	* CORE: Added TimeStampStringType to support Android timestamps.
 	* CORE: Added the ability to override the DataPersister as well as the FieldConverter.
+	* CORE: Fixed a bug with building queries using selectRaw(...).  Bug #166.
 	* ANDROID: Fixed the string processing when persisting java.sql.Timestamp classes. Bug #163.
 	* ANDROID: Added initial take on Loader base classes from EgorAnd for newer Android versions.  Thanks much!!
 
